--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,28 @@
 asgiref==3.6.0
+astroid==2.15.2
+certifi==2022.12.7
+charset-normalizer==3.1.0
+colorama==0.4.6
+dill==0.3.6
 Django==3.2.18
+django-appconf==1.0.5
+django-imagekit==4.1.0
+idna==3.4
+isort==5.11.5
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
+pilkit==2.0
+Pillow==9.5.0
+platformdirs==3.2.0
+pylint==2.17.2
 pytz==2023.3
+requests==2.28.2
+six==1.16.0
+sorl-thumbnail==12.9.0
 sqlparse==0.4.3
+tomli==2.0.1
+tomlkit==0.11.7
+typed-ast==1.5.4
 typing_extensions==4.5.0
+urllib3==1.26.15
+wrapt==1.15.0
